--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ html {
     font-size: 24px;
     color: #2C2C2C;
     font-family: "Roboto", sans-serif;
+    transition: all 0.5s ease 0s;
 }
 [class*="__container"]{
     max-width: 1280px;
